# INF200-2019-Exersices

./: README.rst  setup.cfg
exercises/ex_01/: ex_01_play.py  ex_01_sim.py
exercises/ex_01_petter_hetland/: ex_01_play.py
exersices/Ex01/: comp_to_loop.py  deck_by_comp.py  letter_counts.py  tidy_code.py
src/YOUR_NAME_ex/ex03_project/: test_sorting.py
src/fabian_nemazi_ex/ex03_project/: test_median.py
src/petter_hetland_ex/ex00/: Task_C.py
src/petter_hetland_ex/ex01/: README_01.rst  Task_A.py  Task_B.py  Task_C.py  Task_D.py  ex_01_play_func.py  ex_01_sim.py  ex_01_sim_func.py
src/petter_hetland_ex/ex02/: file_stats.py
