[metadata]
name = andreas_sandvik_høimyr_ex00
version = 0.0.1
description = Exersices for INF200
author = Andreas Sandvik Høimyr
author_email = andrehoi@nmbu.no
    
[options]
packages = find:
package_dir = 
    =src
include_package_data = True
install_requires = 

[options.packages.find]
where=src

